--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body { background-color: var(--bg-dark); color: var(--text-main); overflow-x: hi
 .container { width: 90%; max-width: 1200px; margin: 0 auto; }
 .main-sections-container { padding-bottom: 50px; }
 
-.logo-text { font-size: 24px; font-weight: 900; letter-spacing: 2px; color: var(--text-main); }
+.logo-text { font-size: 24px; font-weight: 900; letter-spacing: 2px; color: var(--text-main); transition: transform 0.2s; }
 .logo-text span { color: var(--primary-color); }
+.clickable-logo:hover { transform: scale(1.05); }
 
 .overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); display: flex; justify-content: center; align-items: center; z-index: 1000; opacity: 0; pointer-events: none; transition: opacity 0.3s ease; }
 .overlay.active { opacity: 1; pointer-events: all; }
@@ -111,7 +112,7 @@ section { padding: 100px 0 50px 0; text-align: center; }
 .tactical-form input, .tactical-form textarea, .tactical-form select { padding: 15px; background: var(--bg-panel); border: 1px solid #333; color: white; border-radius: 4px; font-size: 1rem; }
 .tactical-form textarea { resize: vertical; min-height: 150px; }
 
-/* CARRUSEL ARREGLADO */
+/* CARRUSEL */
 .swiper { width: 100%; padding-top: 30px; padding-bottom: 50px; }
 .swiper-slide { 
     width: 300px; 
@@ -142,8 +143,6 @@ section { padding: 100px 0 50px 0; text-align: center; }
 .btn-qty:hover { background: var(--primary-color); color: black;}
 
 footer { text-align: center; padding: 30px 0; background: #050505; color: #555; border-top: 1px solid #222; }
-
-/* Estilos para listas en popups */
 .popup-box ul li::marker { color: var(--primary-color); }
 
 /* --- ESTILOS DEL CHAT FLOTANTE --- */
